--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "duckcode",
   "displayName": "duckcode",
-  "description": "",
+  "description": "a duck that reminds you when to take a break from coding",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.101.0"
