--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sleepyDuck",
+  "name": "sleepyduck",
   "publisher": "dablower",
   "icon": "img/extIcon.jpeg",
   "displayName": "Sleepy duck",
@@ -11,7 +11,13 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DaBlower/duckcode"
+  },
+  "activationEvents": [
+    "onView:sleepyDuck.view"
+  ],
   "browser": "./dist/web/extension.js",
   "contributes": {
     "viewsContainers": {
