--- a/package.json
+++ b/package.json
@@ -64,10 +64,10 @@
     "process": "^0.11.10",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
-    "webpack": "^5.99.7"
+    "webpack": "^5.99.7",
+    "webpack-cli": "^6.0.1"
   },
   "dependencies": {
-    "vscode": "*",
-    "webhook-cli": "0.1.3"
+    "webpack-cli": "^6.0.1"
   }
 }
